# QC-P2

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakeOptions  README.md  cc.cpp  cc.h  config  general.cpp  general.h  hf.cpp  hf.h  input  input.json  integrals.cpp  integrals.h  main.cpp  mp2.cpp  mp2.h
.github/workflows/: ci.yml
geom/: methane.xyz  nh2.xyz  water.xyz
input/: Cl.xyz  H2O2.xyz  input.json  methane.xyz
qc/: qc.cpp
src/: CMakeLists.txt  cc.cpp  cc.h  core.cpp  core.h  general.cpp  general.h  hf.cpp  hf.h  integrals.cpp  integrals.h  mp2.h  scf.cpp  scf.h  utils.cpp  utils.h
src/qc/: CMakeLists.txt  core.cpp  integrals.cpp  integrals.h  mppt.cpp  mppt.h  scf.cpp  scf.h
tests/: CMakeLists.txt  adder_t.cpp  tests.cpp
